# OpenTechBFG

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPackConfig.cmake  README.md  appveyor.yml  external_credits.txt
.travis/scripts/: build.linux.sh  build.osx.sh  install.osx.sh  install.ubuntu.sh
base/def/: triggers.def
base/materials/: bl_dev.mtr  bl_portalsky.mtr
base/renderprogs/cg/: global.inc  lensDistortion.pixel  lensDistortion.vertex
base/script/: weapon_base.script
base/ui/assets/: guicursor_arrow.tga  guicursor_hand.tga  guicursor_hand_a.tga  guicursor_hand_b.tga  guicursor_hand_circle.tga  guicursor_hand_cross.tga  guicursor_hand_square.tga  guicursor_hand_triangle.tga  guicursor_hand_y.tga  scrollbar_down.tga  scrollbar_left.tga  scrollbar_right.tga  scrollbar_thumb.tga  scrollbar_up.tga  scrollbarh.tga  scrollbarv.tga
libs/breakpad/: CMakeLists.txt  breakpad.cmake
libs/rapidxml/: CMakeLists.txt  rapidxml.cmake
neo/: CMakeLists.txt  cmake-eclipse-mingw-debug.bat  cmake-eclipse-mingw-debug.sh  common.cmake  freetype.cmake  gcc.cmake  glew.cmake  libjpeg.cmake  libpng.cmake  libraries.cmake  minizip.cmake  msvc.cmake  oggvorbis.cmake  tools.cmake  unix.cmake  windows.cmake  zlib.cmake
neo/cegui/: CEGUI_Hooks.cpp
neo/cm/: CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h
neo/cmake/: common.cmake  gcc.cmake  libraries.cmake  windows.cmake
neo/d3xp/: EnvironmentProbe.cpp  EnvironmentProbe.h  Game.h  Game_local.cpp  Game_local.h  Game_network.cpp  Leaderboards.cpp  MultiplayerGame.cpp
neo/d3xp/gamesys/: SaveGame.cpp  SaveGame.h  SysCmds.cpp
neo/d3xp/menus/: MenuHandler.cpp  MenuHandler.h  MenuHandler_HUD.cpp  MenuHandler_Interface.h  MenuHandler_PDA.cpp  MenuHandler_SWF.cpp  MenuHandler_SWF.h  MenuHandler_Scoreboard.cpp  MenuHandler_Shell.cpp  MenuScreen.h  MenuScreen_HUD.cpp  MenuScreen_Interface.h  MenuScreen_PDA_Inventory.cpp  MenuScreen_PDA_UserData.cpp  MenuScreen_PDA_UserEmails.cpp  MenuScreen_PDA_VideoDisks.cpp  MenuScreen_SWF.cpp  MenuScreen_SWF.h  MenuScreen_Scoreboard.cpp  MenuScreen_Shell_Bindings.cpp  MenuScreen_Shell_Browser.cpp  MenuScreen_Shell_ControllerLayout.cpp  MenuScreen_Shell_Controls.cpp  MenuScreen_Shell_Credits.cpp  MenuScreen_Shell_Dev.cpp  MenuScreen_Shell_Difficulty.cpp  MenuScreen_Shell_GameLobby.cpp  MenuScreen_Shell_GameOptions.cpp  MenuScreen_Shell_Gamepad.cpp  MenuScreen_Shell_Leaderboards.cpp  MenuScreen_Shell_Load.cpp  MenuScreen_Shell_MatchSettings.cpp  MenuScreen_Shell_ModeSelect.cpp  MenuScreen_Shell_NewGame.cpp  MenuScreen_Shell_PartyLobby.cpp  MenuScreen_Shell_Pause.cpp  MenuScreen_Shell_Playstation.cpp  MenuScreen_Shell_PressStart.cpp  MenuScreen_Shell_Resolution.cpp  MenuScreen_Shell_Root.cpp  (+27 more)
neo/d3xp/physics/: Physics_Parametric.h
neo/d3xp/script/: Script_Program.cpp
neo/framework/: CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Common_demos.cpp  Common_load.cpp  Common_local.h  Common_mapconvert.cpp  DemoFile.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  File_SaveGame.cpp  File_SaveGame.h  Zip.cpp  Zip.h  common_frame.cpp
neo/idlib/: Heap.h  MapFile.cpp  MapFile.h  Str.cpp  Str.h
neo/idlib/math/: Math.h
neo/idlib/sys/: sys_alloc_tags.h  sys_types.h
neo/idlib/sys/win32/: win_thread.cpp
neo/imgui/: BFGimguiImpl.cpp
neo/libs/glew/: CMakeLists.txt  glew.cmake
neo/libs/png/: CMakeLists.txt
neo/libs/zlib/: minizip.cmake
neo/libs/zlib/zlib/minizip/: unzip.cpp
neo/renderer/: BinaryImage.cpp  BoundsTrack.cpp  Cinematic.cpp  Font.cpp  Image.h  Image_files.cpp  Image_intrinsic.cpp  Image_load.cpp  Interaction.h  Material.cpp  Model.cpp  ModelDecal.cpp  ModelDecal.h  ModelManager.h  ModelOverlay.cpp  ModelOverlay.h  RenderEntity.cpp  RenderProgs.cpp  RenderProgs.h  RenderProgs_GLSL.cpp  RenderProgs_embedded.h  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld.cpp  RenderWorld.h  RenderWorld_defs.cpp  RenderWorld_demo.cpp  RenderWorld_load.cpp  RenderWorld_local.h  tr_backend_draw.cpp  tr_backend_rendertools.cpp  tr_local.h
neo/renderer/DXT/: DXTCodec.h  DXTEncoder.cpp  DXTEncoder_SSE2.cpp
neo/sound/: snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_world.cpp
neo/sound/OpenAL/: AL_SoundHardware.cpp  AL_SoundHardware.h  AL_SoundSample.cpp  AL_SoundVoice.cpp
neo/swf/: SWF.h  SWF_Enums.h  SWF_Image.cpp  SWF_Names.cpp  SWF_ScriptFunction.cpp  SWF_Sprites.cpp  SWF_Zlib.cpp
neo/sys/common/: savegame.cpp  socket_net.cpp
neo/sys/posix/: platform_osx.cpp  posix_main.cpp  posix_public.h
neo/sys/sdl/: sdl_glimp.cpp
neo/sys/win32/: win_cpu.cpp  win_input.cpp  win_input.h  win_local.h  win_main.cpp  win_syscon.cpp
neo/tools/: ToolGui.cpp  Tools.h
neo/tools/compilers/: compiler_public.h
neo/tools/compilers/dfont/: dfont.cpp  dfont.h
neo/tools/compilers/dmap/: dmap.cpp  dmap.h  facebsp.cpp  glfile.cpp  map.cpp  output.cpp  portals.cpp  ubrush.cpp  usurface.cpp
neo/tools/compilers/fontcodec/: BFGfont.cpp  BFGfont.h  BMfont.cpp  BMfont.h  FontMethods.cpp  FontMethods.h  FontTool.cpp  FontTool.cxx  blFontCodec.cpp  blFontCodec.h  fontcodec.cpp  fontcodec.h  fontcomp.cpp  fontdecomp.cpp
neo/tools/compilers/fontcomp/: fontcomp.cpp  fontcomp.h
neo/tools/compilers/importfont/: FontMethods.cpp  FontMethods.h  FontTool.cpp
neo/tools/editors/: LightEditor.cpp  editors_public.h
neo/tools/editors/cameraExplorer/: cameraExplorer.cpp  cameraExplorer.h
scripts/: cmake-eclipse-linux-debug.sh  cmake-eclipse-linux-profile-nocegui-nobreakpad-nojpeg.sh  cmake-eclipse-linux-profile-nocegui-nobreakpad.sh  cmake-eclipse-linux-profile-nocegui.sh  cmake-eclipse-linux-profile.sh  cmake-linux-release.sh  cmake-macOS-debug-nocegui.sh
